--- a/JustAnotherLanguage/Makefile
+++ b/JustAnotherLanguage/Makefile
@@ -1,14 +1,14 @@
 build: Lexer.o Machine.o Parser.o Main.o
-	g++ -std=c++11 ./obj/*.o -o compiler
+	g++ -std=c++11 -Wall ./obj/*.o -o compiler
 
 Lexer.o:
-	g++ -std=c++11 -c Lexer.cpp -o ./obj/Lexer.o
+	g++ -std=c++11 -Wall -c Lexer.cpp -o ./obj/Lexer.o
 
 Machine.o:
-	g++ -std=c++11 -c Machine.cpp -o ./obj/Machine.o 
+	g++ -std=c++11 -Wall -c Machine.cpp -o ./obj/Machine.o 
 
 Parser.o:
-	g++ -std=c++11 -c Parser.cpp -o ./obj/Parser.o
+	g++ -std=c++11 -Wall -c Parser.cpp -o ./obj/Parser.o
 
 Main.o:
-	g++ -std=c++11 -c Main.cpp -o ./obj/Main.o
+	g++ -std=c++11 -Wall -c Main.cpp -o ./obj/Main.o
