add new futures in list and hashset

--- a/JustAnotherLanguage/Makefile
+++ b/JustAnotherLanguage/Makefile
@@ -1,17 +1,20 @@
+CC=g++
+CFLAGS=-std=c++11 -g -Wall 
+
 build: prepair Lexer.o Machine.o Parser.o Main.o
-	g++ -std=c++11 -Wall ./obj/*.o -o compiler
+	$(CC) $(CFLAGS) ./obj/*.o -o compiler
 
 Lexer.o:
-	g++ -std=c++11 -Wall -c Lexer.cpp -o ./obj/Lexer.o
+	$(CC) $(CFLAGS) -c Lexer.cpp -o ./obj/Lexer.o
 
 Machine.o:
-	g++ -std=c++11 -Wall -c Machine.cpp -o ./obj/Machine.o 
+	$(CC) $(CFLAGS) -c Machine.cpp -o ./obj/Machine.o 
 
 Parser.o:
-	g++ -std=c++11 -Wall -c Parser.cpp -o ./obj/Parser.o
+	$(CC) $(CFLAGS) -c Parser.cpp -o ./obj/Parser.o
 
 Main.o:
-	g++ -std=c++11 -Wall -c Main.cpp -o ./obj/Main.o
+	$(CC) $(CFLAGS) -c Main.cpp -o ./obj/Main.o
 
 prepair:
 	mkdir ./obj/
